added swagger ui endpoint
